proyecto actualizado al repositorio local

--- a/public/.htaccess
+++ b/public/.htaccess
@@ -3,11 +3,12 @@
         Options -MultiViews -Indexes
     </IfModule>
 
+    Options +FollowSymLinks -Indexes
     RewriteEngine On
 
     # Handle Authorization Header
     RewriteCond %{HTTP:Authorization} .
-    RewriteRule .* - [E=HTTP_AUTHORIZATION:%{HTTP:Authorization}]
+    RewriteRule .* - [E=HTTP_AUTHORIZATION:%{HTTP:Authorization}]  
 
     # Redirect Trailing Slashes If Not A Folder...
     RewriteCond %{REQUEST_FILENAME} !-d
